340 ==> 437897 - Windows timestamp to metadata extraction for TIFFs changes when modifying files.
341 ==> 397999 - Sort thumbs by date. causes issues.
342 ==> 437736 - digiKam 7.3 doesn't have a Translators tab in its About dialogue anymore.
343 ==> 438093 - digiKam po file no longer has any information about translators.
344 ==> 438120 - Geolocation data not being saved.
345 ==> 438134 - Unexpected behaviour of face overlay in preview window.
346 ==> 438248 - W10 Sysinternals Process Monitor digikam Cannot create files digikam4.db-journal; digikam4.db-wal.
347 ==> 428964 - Crash updating fingerprints before checking similarities.
348 ==> 427337 - Crash when rebuilding thumbnails or fingerprints.
349 ==> 438465 - Question to Color Spaces.
350 ==> 438344 - Questions to Add Border Tool.
351 ==> 438466 - Image editor - Color Negative closes application.
352 ==> 432650 - MacOS: digikam system menu not localizable.
353 ==> 437606 - Freenode IRC has been taken over; advise to move the channel to libera.chat or oftc.
354 ==> 354600 - Changing background colour after Free Rotation.
355 ==> 438855 - ShowFoto - DNG-Converter I.
356 ==> 438856 - ShowFoto - DNG-Converter II.
357 ==> 438878 - Ambiguous Shortcut window on startup.
358 ==> 438888 - Exiftool - non ASCII characters.
359 ==> 438961 - Searching images created on a given day of every month is not possible.
360 ==> 439000 - Keyboard shortcut assigned.
361 ==> 326247 - Add a new button to expand or collapse all album tree-view items.
362 ==> 438720 - BSOD when browsing photos.
363 ==> 439059 - "exiftoollistviewgroup".
364 ==> 439057 - Output helpers for ExifTool data (print, save, copy).
365 ==> 439161 - .insv (360-video) files not shown.
366 ==> 439231 - ExifTool and e.g. *.psd images.
367 ==> 439409 - Video slideshow does not respect EXIF orientation flag.
368 ==> 439404 - Writing of face tags should not depend on the tags settings.
369 ==> 439436 - Problems with video-slideshow.
370 ==> 